# portafolio-ingenieria-sistemas-lautaro

./: README.md
Algoritmos/: CMakeLists.txt
Algoritmos/BFS/: BFS.cpp  BFS.h  CMakeLists.txt  main.cpp
Algoritmos/DFS/: CMakeLists.txt  DFS.cpp  DFS.h  main.cpp
Algoritmos/Dijkstra/: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  main.cpp
Algoritmos/Dijkstra/Solucion/: Solucion.cpp  Solucion.h
Algoritmos/Kruskal/: CMakeLists.txt  Kruskal.cpp  Kruskal.h  main.cpp
Algoritmos/Prim/: CMakeLists.txt  Prim.cpp  Prim.h  main.cpp
Algoritmos/PuntosArticulacion/: CMakeLists.txt  PuntoArticulacion.cpp  PuntoArticulacion.h  main.cpp
Algoritmos/STL/: CMakeLists.txt  List.cpp  List.h
Algoritmos/STL/Hash_Map/: CMakeLists.txt  Hash_Map.cpp
Algoritmos/Sets/: CMakeLists.txt  Sets.cpp  Sets.h
Algoritmos/TDAGrafo/: CMakeLists.txt  TDAGrafo.cbp  main.cpp
Algoritmos/TDAGrafo/Algorithms/: DFS.h
Algoritmos/TDAGrafo/include/: Grafo.h
Algoritmos/TDAGrafo/src/: Grafo.cpp
Algoritmos/TopSort/: CMakeLists.txt  TopSort.cpp  TopSort.h  main.cpp
Registrador Ambiental con Arduino/: README.md  Registrador_Ambiental.ino
arqui1/: ALU.vhd  ALU.vhd.bak  ALU32.vhd  ALU32.vhd.bak  AND_GATE.vhd  AND_GATE.vhd.bak  ARQUI1.cr.mti  ARQUI1.mpf  Arqui.cr.mti  Arqui.mpf  DMux1_2.vhd  DMux1_2.vhd.bak  DMux2_1.vhd  DMux4_2.vhd  DMux4_2.vhd.bak  FA_1.vhd  Mux2_4.vhd  Mux2_4.vhd.bak  Mux4_1.vhd  Mux4_1.vhd.bak  Mux4_4.vhd  Mux4_4.vhd.bak  NOT_GATE.vhd  NOT_GATE.vhd.bak  OR_GATE.vhd  OR_GATE.vhd.bak  RegisterFile.vhd.bak  Registers.vhd  Registers.vhd.bak  TB_ALU32.vhd  XOR_GATE.vhd  XOR_GATE.vhd.bak  (+3 more)
(+20 files in other folders)
